syntax = "proto3";

package protobuf;

import "google/api/annotations.proto";

// Defines the interface implemented and methods exposed by the exemplar service.
service EyePi {

    // HelloProxy says 'hello' in a form that is handled by the gateway proxy.
    rpc HelloProxy(HelloRequest) returns (HelloResponse) {

        // Defines the optional REST method and route to be exposed cooresponding to the `HelloProxy` method.
        option (google.api.http) = {
            get: "/EyePi/services/hello"
        };
    }

    rpc AcceptImage(ImageRequest) returns (ImageResponse){
        option (google.api.http) = {
            post: "/image"
            body: "*"
        };
    }
}

// Defines the request type for the `HelloProxy` method.
message HelloRequest {
    string hello_text = 1;
}

// Defines the response type for the `HelloProxy` method.
message HelloResponse {
    string text = 1;
}

message ImageRequest {
    string ImageName = 1;
    bytes image = 2;
}

message ImageResponse {
    string text = 1;
}